@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.2553 2007/12/01 16:52:25 rillig Exp $
+$NetBSD: CHANGES-2007,v 1.2554 2007/12/01 17:22:22 reed Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -4668,3 +4668,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated converters/bibtex2html to 1.88 [tonio 2007-12-01]
 	Updated lang/ocamlduce to 3.10.0 [tonio 2007-12-01]
 	Updated time/devtodo to 0.1.20 [rillig 2007-12-01]
+	Updated mail/mpop to 1.0.12 [reed 2007-12-01]
